--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -1,12 +1,11 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
 }
 .banner{
     width: 100%;
     height: 100vh;
-    background: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.75)),url("images/corn.jpg");
+    background: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.75)),url("../images/corn.jpg");
     background-size: cover;
     background-position: center;
 }
