--- a/src/main/webapp/css/farmer.css
+++ b/src/main/webapp/css/farmer.css
@@ -43,7 +43,6 @@ body .marichu{
     border-radius: 30px;
     transition: .5s;
 }
-
 .login{
   width: 40%;
   height: 90%;
@@ -247,6 +246,10 @@ nav .fa{
 /* style for the otp div */
 .sendOtp{
     padding: 10px 15px;
+}
+.input-detailLast{
+    display: flex;
+    flex-direction: column;
 }
 
 @media only screen and (max-width :700px){
