--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -5,7 +5,7 @@
 .banner{
     width: 100%;
     height: 100vh;
-    background: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.75)),url("../images/corn.jpg");
+    background: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.75)),url("../images/horizon.jpeg");
     background-size: cover;
     background-position: center;
 }
